--- a/demo/isu-checkbox-group/index.html
+++ b/demo/isu-checkbox-group/index.html
@@ -63,7 +63,7 @@
       <isu-checkbox-group id="checkbox1" label="材料" value="1, 3" readonly></isu-checkbox-group>
       <script>
         checkbox1.items = [
-          {label: '薄膜', value: 0},
+          {label: '薄膜ffffffffffffff', value: 0},
           {label: '纤维', value: 1},
           {label: '塑料', value: 2},
           {label: '其它', value: 3}
@@ -80,7 +80,7 @@
       <isu-checkbox-group id="checkboxDisable" label="材料" value="0"></isu-checkbox-group>
       <script>
         checkboxDisable.items = [
-          {label: '薄膜', value: 0},
+          {label: '薄膜ffffffffffffff', value: 0},
           {label: '纤维', value: 1},
           {label: '塑料', value: 2, disabled: true},
           {label: '其它', value: 3, disabled: true}
