修改picker的get请求和post请求

--- a/demo/isu-picker/index.html
+++ b/demo/isu-picker/index.html
@@ -217,7 +217,7 @@ document.body.appendChild($_documentContainer.content);
       </custom-style>
       <isu-picker id="picker9" label="公司" src="/init.do" multi="" attr-for-value="id"></isu-picker>
       <script>
-        const pickerMeta = [{field: 'label', label: '选项'}, {field: 'business', label: '业务范围'}];
+        // const pickerMeta = [{field: 'label', label: '选项'}, {field: 'business', label: '业务范围'}];
         picker9.pickerMeta = pickerMeta;
         picker9.value = 2222
         // picker9.fetchParam = {id: 2}
