isu-paper-tabs 样式修改  新增可删除paper-tab功能

--- a/demo/isu-paper-tabs/index.html
+++ b/demo/isu-paper-tabs/index.html
@@ -81,11 +81,12 @@
                 <isu-paper-tabs selected="0" id="iSuPaperTabs1"></isu-paper-tabs>
                 <script>
                   iSuPaperTabs1.tabList = [
-                    {name: 'ITEM ONE',value:0,disabled:false,permission:true,iconName:'communication:email'},
-                    {name: 'ITEM TWO',value:1,disabled:false,permission:true,iconName:'communication:email'},
-                    {name: 'ITEM Three',value:2,disabled:false,permission:true,iconName:'communication:email'},
-                    {name: 'ITEM Four',value:3,disabled:false,permission:true,iconName:'communication:email'}
+                    {name: 'ITEM ONE',value:0,disabled:false,permission:true},
+                    {name: 'ITEM TWO',value:1,disabled:false,permission:true},
+                    {name: 'ITEM Three',value:2,disabled:false,permission:true},
+                    {name: 'ITEM Four',value:3,disabled:false,permission:true}
                   ];
+                  iSuPaperTabs1.isClear = true
                 </script>
             </template>
         </demo-snippet>
