--- a/demo/isu-select/index.html
+++ b/demo/isu-select/index.html
@@ -9,6 +9,7 @@
     import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
     import '../../isu-select'
+    import './demo/isu-select-test'
   </script>
     <script type="module">
 const $_documentContainer = document.createElement('template');
@@ -39,6 +40,13 @@ document.body.appendChild($_documentContainer.content);
   <h3>支持默认选中</h3>
   <demo-snippet>
     <template>
+      <custom-style>
+        <style>
+          #selectShow {
+            --isu-select-width: 340px
+          }
+        </style>
+      </custom-style>
       <isu-select id="select" label="球员" placeholder="选择球员" value="1" required prompt="球员选择不能为空"></isu-select>
       <isu-select id="select1" label="球员" placeholder="选择球员" multi="" value="1, 2, 3, 4"></isu-select>
       <isu-select id="selectShow" label="球员" placeholder="选择球员" multi="" show-all value="1, 2, 3, 4"></isu-select>
@@ -46,7 +54,7 @@ document.body.appendChild($_documentContainer.content);
         const items = [
           {"label": "梅西", "value": 1},
           {"label": "C罗", "value": 2},
-          {"label": "苏亚雷斯", "value": 3},
+          {"label": "苏亚雷斯fffffffffffffffffffff", "value": 3},
           {"label": "库蒂尼奥", "value": 4},
           {"label": "特尔斯特根", "value": 5},
           {"label": "保利尼奥", "value": 6},
@@ -120,6 +128,13 @@ document.body.appendChild($_documentContainer.content);
       <script>
         select6.items = items;
       </script>
+    </template>
+  </demo-snippet>
+
+  <h3>筛选</h3>
+  <demo-snippet>
+    <template>
+      <isu-select-test></isu-select-test>
     </template>
   </demo-snippet>
 </div>
