是否是文本模式修改

--- a/demo/isu-input/index.html
+++ b/demo/isu-input/index.html
@@ -118,7 +118,8 @@
       </custom-style>
       <isu-input label="有值必填框" value="梅西" required=""></isu-input>
       <isu-input id="required-input" label="无值必填框" required="" prompt="必填项"></isu-input>
-      <isu-input label="只读输入框" value="梅西" readonly=""></isu-input>
+      <isu-input label="只读输入框" value="梅西" suffix-unit="吨" readonly></isu-input>
+      <isu-input label="文本格式" value="梅西" suffix-unit="吨" readonly is-view></isu-input>
     </template>
   </demo-snippet>
 
