是否是文本模式修改

--- a/demo/isu-select/index.html
+++ b/demo/isu-select/index.html
@@ -72,6 +72,7 @@ document.body.appendChild($_documentContainer.content);
   <demo-snippet>
     <template>
       <isu-select id="select2" label="球员" placeholder="选择球员" readonly="" value="1"></isu-select>
+      <isu-select id="select2" label="文本模式" placeholder="选择球员" readonly="" is-view value="1"></isu-select>
       <isu-select id="select3" label="球员" placeholder="选择球员" required="" multi=""></isu-select>
       <isu-select id="selectLimit" label="球员" placeholder="选择球员" required="" multi show-all multi-limit="4"></isu-select>
       <script>
