--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="refresh"/>
     <title>isuwang-element</title>
     <script type="module">
-      import '@polymer/iron-component-page/iron-component-page.js';
+      import './node_modules/@polymer/iron-component-page/iron-component-page.js';
     </script>
   </head>
   <body>
