只读文本属性is-view,修改picker组件显示不了的问题

--- a/demo/isu-textarea/index.html
+++ b/demo/isu-textarea/index.html
@@ -49,6 +49,7 @@ document.body.appendChild($_documentContainer.content);
   <demo-snippet>
     <template>
       <isu-textarea label="备注" value="readonly" readonly></isu-textarea>
+      <isu-textarea label="备注" value="isView" is-view readonly></isu-textarea>
       <isu-textarea label="备注" value="disabled" disabled></isu-textarea>
     </template>
   </demo-snippet>
