日期组件修改，添加只读属性

--- a/demo/isu-input-date/index.html
+++ b/demo/isu-input-date/index.html
@@ -68,6 +68,7 @@
     <template>
       <isu-input-date label="日期必填" required=""></isu-input-date>
       <isu-input-date label="日期只读" value="2017-10-25" readonly=""></isu-input-date>
+      <isu-input-date label="日期只读文本" value="2017-10-25" readonly is-view></isu-input-date>
     </template>
   </demo-snippet>
 
