--- a/demo/isu-pagination/index.html
+++ b/demo/isu-pagination/index.html
@@ -40,11 +40,11 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <isu-pagination id="page" total="5000" start="0" limit="20"></isu-pagination>
       <script>
-        page.addEventListener("start-changed", e => {
+        page.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        page.addEventListener("limit-changed", e => {
+        page.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
@@ -58,11 +58,11 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <isu-pagination id="page1" total="50" page-sizes='[10,20,30]' start="0" limit="10"></isu-pagination>
       <script>
-        page1.addEventListener("start-changed", e => {
+        page1.addEventListener("isu-start-changed", e => {
           console.log("page1 start", e);
         });
-  
-        page1.addEventListener("limit-changed", e => {
+
+        page1.addEventListener("isu-limit-changed", e => {
           console.log("page1 limit", e);
         });
       </script>
@@ -77,33 +77,33 @@ document.body.appendChild($_documentContainer.content);
       <h3>size=normal</h3>
       <isu-pagination id="pageNormal" total="5000" start="0" limit="20"></isu-pagination>
       <script>
-        pageNormal.addEventListener("start-changed", e => {
+        pageNormal.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        pageNormal.addEventListener("limit-changed", e => {
+        pageNormal.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
       <h3>size=small</h3>
       <isu-pagination id="page2" total="5000" start="0" limit="20" size="small"></isu-pagination>
       <script>
-        page2.addEventListener("start-changed", e => {
+        page2.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        page2.addEventListener("limit-changed", e => {
+        page2.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
       <h3>size=mini</h3>
       <isu-pagination id="page3" total="5000" start="0" limit="20" size="mini" hide-page-select></isu-pagination>
       <script>
-        page2.addEventListener("start-changed", e => {
+        page2.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        page2.addEventListener("limit-changed", e => {
+        page2.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
@@ -118,22 +118,22 @@ document.body.appendChild($_documentContainer.content);
       <h3>不隐藏</h3>
       <isu-pagination id="pageSingle1" total="1" start="0" limit="20"></isu-pagination>
       <script>
-        pageNormal.addEventListener("start-changed", e => {
+        pageNormal.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        pageNormal.addEventListener("limit-changed", e => {
+        pageNormal.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
       <h3>隐藏</h3>
       <isu-pagination id="pageSingle2" total="1" start="0" limit="20" hide-on-single-page></isu-pagination>
       <script>
-        pageSingle2.addEventListener("start-changed", e => {
+        pageSingle2.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        pageSingle2.addEventListener("limit-changed", e => {
+        pageSingle2.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
@@ -147,11 +147,11 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <isu-pagination id="pageSelect" total="5000" start="0" limit="20" hide-page-select></isu-pagination>
       <script>
-        pageSelect.addEventListener("start-changed", e => {
+        pageSelect.addEventListener("isu-start-changed", e => {
           console.log("page start", e);
         });
 
-        pageSelect.addEventListener("limit-changed", e => {
+        pageSelect.addEventListener("isu-limit-changed", e => {
           console.log("page limit", e);
         });
       </script>
