树不区分大小写

--- a/demo/isu-tree/index.html
+++ b/demo/isu-tree/index.html
@@ -332,8 +332,8 @@
                       { id: 2115, label: '5', children: [] }
                     ]
                   },
-                  { id: 212, label: '三级2第2个', disabled: true, children: [] },
-                  { id: 213, label: '三级3第3个', children: [] },
+                  { id: 212, label: '三级2第2个aa', disabled: true, children: [] },
+                  { id: 213, label: '三级3第3个AA', children: [] },
                   { id: 214, label: '三级4第4个', children: [] },
                   { id: 215, label: '三级5第5个', children: [] }
                 ]
