--- a/demo/isu-input-number/index.html
+++ b/demo/isu-input-number/index.html
@@ -7,34 +7,34 @@
   <title>isu-input-number demo</title>
   
   <script type="module">
-    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
-    import '../../isu-input-number'
+    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js'
+import '../../isu-input-number'
   </script>
   
   <script type="module">
-    const $_documentContainer = document.createElement('template');
-    
-    $_documentContainer.innerHTML = `<custom-style>
-    <style is="custom-style" include="demo-pages-shared-styles">
-      .centered {
-        min-width: 800px;
-      }
+    const $_documentContainer = document.createElement('template')
 
-      demo-snippet {
-        --demo-snippet-code: {
-          max-height: 500px;
-        }
-      }
+$_documentContainer.innerHTML = `<custom-style>
+<style is="custom-style" include="demo-pages-shared-styles">
+  .centered {
+    min-width: 800px;
+  }
 
-      isu-input {
-        margin-bottom: 10px;
-      }
-    </style>
-  </custom-style>`;
-    
-    document.body.appendChild($_documentContainer.content);
+  demo-snippet {
+    --demo-snippet-code: {
+      max-height: 500px;
+    }
+  }
+
+  isu-input {
+    margin-bottom: 10px;
+  }
+</style>
+  </custom-style>`
+
+document.body.appendChild($_documentContainer.content)
   </script>
 </head>
 <body>
@@ -66,6 +66,13 @@
       <isu-input-number id="inputNumber5" no-controls></isu-input-number>
       <h4>精度为2</h4>
       <isu-input-number id="inputNumber6" precision="2" step="0.1"></isu-input-number>
+      <h4>限制输入3位小数</h4>
+      <isu-input-number id="inputNumberInt" is-pattern-limit></isu-input-number>
+      <script>
+        inputNumberInt.addEventListener('pattern-value-changed', e => {
+          e.detail.target.value = e.detail.target.value.replace(/^\D*([0-9]*)(\.?)([0-9]{0,3}).*$/, '$1$2$3')
+        })
+      </script>
       <h4>只能输入步长的倍数</h4>
       <isu-input-number id="inputNumber6" step="2" step-strictly></isu-input-number>
     </template>
